Tried to improve a user's first contact with the site:
Tooltips are now manipulated programmatically, so that there will not be unecessary flashing when you move the mouse.  It also won't flash anymove when the text updates.  Autocomplete and some other options are turned off.  You can submit your username with clicking, or pressing enter.  The tooltip has been styled to be red.

--- a/public/main.css
+++ b/public/main.css
@@ -910,3 +910,19 @@ padding-top: 11px;
 
   display:none;
 }
+
+#login .tooltip-inner {
+  min-width: 300px;
+  max-width: 300px;
+
+  font-size: 1.2em;
+}
+#login .tooltip {
+  opacity: 1 !important;
+}
+#login .tooltip.top > .tooltip-inner {
+  background-color: #ed6565;
+}
+#login .tooltip.top > .tooltip-arrow {
+  border-top-color: #ed6565;
+}
