Now current participant blank state and non-blank-states are shown properly.

--- a/public/main.css
+++ b/public/main.css
@@ -899,7 +899,7 @@ padding-top: 11px;
   background: rgba(0, 0, 0, 0.24);
 }
 #no_participants, #currentbets {
-  visibility: hidden;
+  display: none;
 }
 
 #volume_slider {
