Current participant count appears in a badge to the right of "Current Participants".

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -52,9 +52,9 @@
           <div class="col-md-4 nosidemargin rsNoDrag table-responsive">
             <!-- h4.fadedtext Current Participants-->
             <ul id="myTab" style="margin-left:8%;" class="nav nav-pills">
-              <li class="active"><a href="#current_participants_pane" data-toggle="pill">Current Participants</a></li>
+              <li class="active"><a href="#current_participants_pane" data-toggle="pill">Current Participants<i class="number-badge current-participants-badge"></i></a></li>
               <li><a href="#past_winners_pane" data-toggle="pill">Past Winners</a></li>
-              <li><a id="chat_pill" href="#chat_toggle2" data-toggle="pill">Chat&nbsp;<i class="chat-badge"></i></a></li>
+              <li><a id="chat_pill" href="#chat_toggle2" data-toggle="pill">Chat&nbsp;<i class="number-badge chat-badge"></i></a></li>
             </ul>
             <div class="tab-content">
               <div id="current_participants_pane" class="tab-pane active">
