--- a/public/main.css
+++ b/public/main.css
@@ -869,10 +869,7 @@ padding-top: 11px;
   background: rgba(34, 34, 34, .5);
 }
 
-.chat-badge {
-  position: absolute;
-  top: 10px;
-  right: 2px;
+.number-badge {
   display: block;
   border-radius: 50%;
   font-size: 9px;
@@ -884,9 +881,28 @@ padding-top: 11px;
   background-color: #ed6565;
   color: #ffffff;
 }
-.chat-badge:empty {
-  background-color: transparent;
+.number-badge:empty {
+  background-color: transparent !important;
 }
+
+.number-badge.chat-badge {
+  position: absolute;
+  top: 10px;
+  right: 2px;
+
+  background-color: #ed6565;
+  color: #ffffff;
+}
+.number-badge.current-participants-badge {
+  position: absolute;
+  top: 10px;
+  right: 2px;
+
+  background-color: #0066FF;
+  color: #ffffff;
+}
+
+
 #no_participants {
   margin-left: 8%;
 }
