--- a/public/views/sidebar.jade
+++ b/public/views/sidebar.jade
@@ -1,5 +1,7 @@
 div#sidebar.list-group
   a.list-group-item(href='#')
+    i.fa.fa-btc.fa-2x#referral_icon
+  a.list-group-item(href='#')
     i.fa.fa-volume-up.fa-2x#volume_slider_icon
     #volume_slider
   a#account_show.list-group-item(href='#')
