--- a/public/views/common_script.jade
+++ b/public/views/common_script.jade
@@ -39,6 +39,10 @@ script.
     });
   });
 
+  socket.on("referral", function (json) {
+    alertify.log("A new user, <b>"+json.user_name+"</b>, just signed up as your referral!<br/><br/>We've added "+json.amount_satoshis+" satoshis to your bitcoin account!", "", 0);
+  });
+
 script.
   /* Google Analytics */
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
