--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -55,7 +55,7 @@ html
         // Slide 1
         .row
 
-          .col-md-4.nosidemargin.rsNoDrag.table-responsive
+          .col-md-4.nosidemargin.rsNoDrag.hidden-xs
 
             // h4.fadedtext Current Participants
             ul.nav.nav-pills#myTab(style="margin-left:8%;")
@@ -100,7 +100,7 @@ html
               .tab-pane#chat_toggle2
                 include chat
 
-          .col-md-5.col-lg-4.nosidemargin.rsNoDrag.chart
+          .col-xs-12.col-md-5.col-lg-4.nosidemargin.rsNoDrag.chart
             .betchart
             span.countertop
               .text-center#nextRoundTitle Bitcoins Splitting In
@@ -179,18 +179,12 @@ html
       .bigcounter
         
       .row
-        .pull-left.clearfix.col-md-3.col-lg-3.bit.bitbank
-          a.my_user_name.welcome
-          br
-          h2.my_balance
-          .btn-group.btn-group.btn-group-justified.btn-group-transparent
-            a.btn.btn-default#withdraw Withdraw
-            a.btn.btn-default#deposit Deposit
-        .col-md-9.col-lg-9.btcchance
+        
+        .col-xs-12.col-sm-12.col-md-12.col-lg-12.btcchance
           // | Risk Chance Calculation
           // a  Learn about Smart API bidding
           | Place Your Bet By Percentage of Prize
-          .pull-right.btn-group.btn-group-justified.btn-group-transparent.btccost#bet_amounts
+          .btn-group.btn-group-justified.hidden-xs.btn-group-transparent.btccost#bet_amounts
             // a.btn.btn-default 0&period;0002300
             a.btn.btn-default(percentage="50") 
             a.btn.btn-default(percentage="20") 
@@ -199,116 +193,133 @@ html
             a.btn.btn-default(percentage="1") 
             a.btn.btn-default(percentage="custom")
               input(type="text", value="0.00000001")#custom_bet_input.form-control.input-sm
-          .pull-right.btn-group.btn-group-justified#bet_buttons
+          .btn-group.btn-group-justified.hidden-xs#bet_buttons
             a.btn.btn-success(percentage="50") 50&percnt;
             a.btn.btn-success(percentage="20") 20&percnt;
             a.btn.btn-success(percentage="10") 10&percnt;
             a.btn.btn-success(percentage="5") 5&percnt;
             a.btn.btn-success(percentage="1") 1&percnt;
             a.btn.btn-success(percentage="custom") Custom Bet
-        
           
-    // FAQ Modal
-    #account_modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
-      .modal-dialog.modal-lg
-        .modal-content
-          .modal-header
-            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
-            h4#myModalLabel.modal-title Your Account Information
-          .modal-body
-            h4.text-left User Name
-            h4.info.my_user_name.text-left
-            h4.text-left Password (
-              span#toggle-password-visibility(onclick="temp.toggle_password_visibility();") show
-              |)
-            h4.info#password.invisible.text-left
-          .modal-footer
-            button.btn.btn-default(type='button', data-dismiss='modal') Close
-    #howitworks.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
-      .modal-dialog.modal-lg
-        .modal-content
-          .modal-header
-            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
-            h4#myModalLabel.modal-title How It Works
-          .modal-body
-            p BitSplit is a bitcoin micro-lottery where larger total bets have a disproportionately higher chance of winning.
+          .btn-group.visible-xs#bet_buttons
+            a.btn.btn-success(percentage="50") 50&percnt;
+            a.btn.btn-success(percentage="20") 20&percnt;
+            a.btn.btn-success(percentage="10") 10&percnt;
+            a.btn.btn-success(percentage="5") 5&percnt;
+            a.btn.btn-success(percentage="1") 1&percnt;
+            a.btn.btn-success(percentage="custom") Custom Bet
 
-            p It&apos;s a lottery where you can consistently earn money if you play strategically.
 
-            p Play around with the pretend money you received for signing up, and see the game in action!
 
-            p If you&apos;re feeling feisty, try to steal some real money from the bitcoin pot with the 1 satoshi you&apos;ve been given :).
-          .modal-footer
-            button.btn.btn-default(type='button', data-dismiss='modal') Close
-    #faqcontent.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
-      .modal-dialog.modal-lg
-        .modal-content
-          .modal-header
-            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
-            h4#myModalLabel.modal-title Frequent Questions Answered
-          .modal-body
-            dl.dl-horizontal
-              dt What is Bitsplit the thinking man&apos;s game&quest;
-              dd Long answer goes here to explain why Bitsplit is fun and smart&period;
-          .modal-footer
-            button.btn.btn-default(type='button', data-dismiss='modal') Close
-    // The Math Modal
-    #themath.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
-      .modal-dialog.modal-lg
-        .modal-content
-          .modal-header
-            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
-            h4#myModalLabel.modal-title The Math Explained
-          .modal-body
-          .modal-footer
-            button.btn.btn-default(type='button', data-dismiss='modal') Close
-    // Verification Modal
-    #verification.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
-      .modal-dialog.modal-lg
-        .modal-content
-          .modal-header
-            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
-            h4#myModalLabel.modal-title Verification
-          .modal-body
-          .modal-footer
-            button.btn.btn-default(type='button', data-dismiss='modal') Close
-    // API Modal
-    #api.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
-      .modal-dialog.modal-lg
-        .modal-content
-          .modal-header
-            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
-            h4#myModalLabel.modal-title The API Explained
-          .modal-body
-          .modal-footer
-            button.btn.btn-default(type='button', data-dismiss='modal') Close
-    // Contact Modal
-    #contact.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
-      .modal-dialog.modal-lg
-        .modal-content
-          .modal-header
-            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
-            h4#myModalLabel.modal-title Contact Us
-          .modal-body
-            p We&apos;d love to hear from you!
-            p Comments, suggestions, questions, ideas -- even complaints -- are all welcome.
-            p You can contact us via 
-              a(href="https://www.facebook.com/bitsplit") facebook.com/bitsplit
-              |  or 
-              a(href="mailto:admin@bitsplit.it?Subject=Hi!") admin@bitsplit.it
-              | .
-          .modal-footer
-            button.btn.btn-default(type='button', data-dismiss='modal') Close
-    // Sign-In Modal
-    #signin.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
-      .modal-dialog
-        .modal-content
-          .modal-header
-            button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
-            h4#myModalLabel.modal-title Sign In
-          .modal-body
-          .modal-footer
-            button.btn.btn-default(type='button', data-dismiss='modal') Close
+  footer.navbar-fixed-bottom.navbar-inverse
+    .bit.bitbank
+          a.my_user_name.welcome
+          h2.my_balance
+          .btn-group.btn-group.btn-group-justified.btn-group-transparent
+            a.btn.btn-default#withdraw Withdraw
+            a.btn.btn-default#deposit Deposit    
+          
+  // FAQ Modal
+  #account_modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+    .modal-dialog.modal-lg
+      .modal-content
+        .modal-header
+          button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+          h4#myModalLabel.modal-title Your Account Information
+        .modal-body
+          h4.text-left User Name
+          h4.info.my_user_name.text-left
+          h4.text-left Password (
+            span#toggle-password-visibility(onclick="temp.toggle_password_visibility();") show
+            |)
+          h4.info#password.invisible.text-left
+        .modal-footer
+          button.btn.btn-default(type='button', data-dismiss='modal') Close
+  #howitworks.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+    .modal-dialog.modal-lg
+      .modal-content
+        .modal-header
+          button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+          h4#myModalLabel.modal-title How It Works
+        .modal-body
+          p BitSplit is a bitcoin micro-lottery where larger total bets have a disproportionately higher chance of winning.
+
+          p It&apos;s a lottery where you can consistently earn money if you play strategically.
+
+          p Play around with the pretend money you received for signing up, and see the game in action!
+
+          p If you&apos;re feeling feisty, try to steal some real money from the bitcoin pot with the 1 satoshi you&apos;ve been given :).
+        .modal-footer
+          button.btn.btn-default(type='button', data-dismiss='modal') Close
+  #faqcontent.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+    .modal-dialog.modal-lg
+      .modal-content
+        .modal-header
+          button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+          h4#myModalLabel.modal-title Frequent Questions Answered
+        .modal-body
+          dl.dl-horizontal
+            dt What is Bitsplit the thinking man&apos;s game&quest;
+            dd Long answer goes here to explain why Bitsplit is fun and smart&period;
+        .modal-footer
+          button.btn.btn-default(type='button', data-dismiss='modal') Close
+  // The Math Modal
+  #themath.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+    .modal-dialog.modal-lg
+      .modal-content
+        .modal-header
+          button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+          h4#myModalLabel.modal-title The Math Explained
+        .modal-body
+        .modal-footer
+          button.btn.btn-default(type='button', data-dismiss='modal') Close
+  // Verification Modal
+  #verification.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+    .modal-dialog.modal-lg
+      .modal-content
+        .modal-header
+          button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+          h4#myModalLabel.modal-title Verification
+        .modal-body
+        .modal-footer
+          button.btn.btn-default(type='button', data-dismiss='modal') Close
+  // API Modal
+  #api.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+    .modal-dialog.modal-lg
+      .modal-content
+        .modal-header
+          button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+          h4#myModalLabel.modal-title The API Explained
+        .modal-body
+        .modal-footer
+          button.btn.btn-default(type='button', data-dismiss='modal') Close
+  // Contact Modal
+  #contact.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+    .modal-dialog.modal-lg
+      .modal-content
+        .modal-header
+          button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+          h4#myModalLabel.modal-title Contact Us
+        .modal-body
+          p We&apos;d love to hear from you!
+          p Comments, suggestions, questions, ideas -- even complaints -- are all welcome.
+          p You can contact us via 
+            a(href="https://www.facebook.com/bitsplit") facebook.com/bitsplit
+            |  or 
+            a(href="mailto:admin@bitsplit.it?Subject=Hi!") admin@bitsplit.it
+            | .
+        .modal-footer
+          button.btn.btn-default(type='button', data-dismiss='modal') Close
+  // Sign-In Modal
+  #signin.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel', aria-hidden='true')
+    .modal-dialog
+      .modal-content
+        .modal-header
+          button.close(type='button', data-dismiss='modal', aria-hidden='true') &times;
+          h4#myModalLabel.modal-title Sign In
+        .modal-body
+        .modal-footer
+          button.btn.btn-default(type='button', data-dismiss='modal') Close
     // Jquery Scripts
     script(type='text/javascript', src='jquery.royalslider.min.js')
     script(type='text/javascript', src='jquery.easing-1.3.js')
