--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -7,7 +7,7 @@ html
     link(rel='stylesheet', href='//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css')
     script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
     script(type='text/javascript', src='https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
-
+    script(type='text/javascript', src='jquery.fittext.js')
     script(type='text/javascript', src='alertify.js')
     script(src='d3.v3.min.js')
     link(rel='stylesheet', href='main.css')
@@ -102,9 +102,6 @@ html
 
           .col-xs-12.col-md-5.col-lg-4.nosidemargin.rsNoDrag.chart
             .betchart
-            span.countertop
-              .text-center#nextRoundTitle Bitcoins Splitting In
-              #nextRoundTime.text-center
           .col-md-3.col-lg-4.nosidemargin#my_current_stats
             .row.summary
               h4.summarysmall.golden.text-right YOUR CHANCE<br>OF WINNING
