Cleaned up the CSS and separated out the chart css.
Am only updating jade files, now.

--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -17,6 +17,7 @@ html
     link(rel='stylesheet', href='alertify.core.css')
     link(rel='stylesheet', href='alertify.bootstrap.css')
     link(rel='stylesheet', href='jquery.nouislider.css')
+    link(rel='stylesheet', href='chart.custom.css')
     link(href='http://fonts.googleapis.com/css?family=Montserrat:400,700', rel='stylesheet', type='text/css')
   body
     // Background
