--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -32,7 +32,7 @@ html
           span.icon-bar
         a.navbar-brand(href='#')
           img(src='https://www.filepicker.io/api/file/DTOJ2HhRjWe2nNPEVA3P')#logo
-      .navbar-collapse.collapse
+      .navbar-collapse.collapse#bitsplitnav-buttons
         ul.nav.navbar-nav.navbar-right
           li
            div(style="margin-right:50px;")
