--- a/public/views/index.jade
+++ b/public/views/index.jade
@@ -197,7 +197,8 @@ html
             a.btn.btn-default(percentage="1") 
             a.btn.btn-default(percentage="custom")
               input(type="text", value="0.00000001")#custom_bet_input.form-control.input-sm
-          .btn-group.btn-group-justified.hidden-xs#bet_buttons
+
+          .btn-group.btn-group-justified.hidden-xs.bet_buttons
             a.btn.btn-success(percentage="50") 50&percnt;
             a.btn.btn-success(percentage="20") 20&percnt;
             a.btn.btn-success(percentage="10") 10&percnt;
@@ -205,7 +206,7 @@ html
             a.btn.btn-success(percentage="1") 1&percnt;
             a.btn.btn-success(percentage="custom") Custom Bet
           
-          .btn-group.visible-xs#bet_buttons
+          .btn-group.visible-xs.bet_buttons
             a.btn.btn-success(percentage="50") 50&percnt;
             a.btn.btn-success(percentage="20") 20&percnt;
             a.btn.btn-success(percentage="10") 10&percnt;
